Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-139731

Axserver crashes on exit if command line arguments passed after standard Qt arguments (removed by QApp)

XMLWordPrintable

    • Windows
    • 4704e20aa (dev), f6fce15f6 (6.10), f73a8c0e8 (tqtc/lts-6.8)

      AxServer apps crash when command line arguments passed. Passing e.g.

      comapp.exe -platform windows test a 

      or

      comapp.exe -style fusion meep

      will always cause a crash when the application shuts down.

      Steps to reproduce the issue:

      • Run the attached project with either set of args above
      • Exit the app (=> crash)

        1. qtbug_139731.zip
          3 kB
        2. qtbug139731_stack.txt
          7 kB
        3. qtbug139731.zip
          3 kB
        For Gerrit Dashboard: QTBUG-139731
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            miikapernu Miika Pernu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: