Fix exit crash in Active Server when passing arguments following standard Qt arguments

Break out of the loop freeing the arguments when encountering a nullptr
due to QGuiApplication shifting the array.

Fixes: QTBUG-139731
Pick-to: 6.8
Change-Id: I954c5ccde0ab70125a770569f3ed59f89845249f
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 4704e20aaacb15d0b5bf373209a76acc0a182241)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>